# ShiftAlghorithmCXX

./: CMakeLists.txt  LICENSE  README.md
libraries/: CMakeLists.txt
libraries/shifter/include/: shifter.hpp
libraries/simple_cli_parser/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
shifter/: CMakeLists.txt
shifter/include/: shifter.hpp
shifter/src/: shifter.cpp
simple_cli_parser/include/: cli_parser.hpp
simple_cli_parser/src/: cli_parser.cpp
tests/: CMakeLists.txt  algorithm_tests.cpp  decoder_tests.cpp  encoder_tests.cpp  prepare_text_tests.cpp
